Fix for license management and excluded some internal dependencies of APS (#83)