@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>org.alfresco.activiti</groupId>
 		<artifactId>aps-project</artifactId>
-		<version>3.0.0-SNAPSHOT</version>
+		<version>3.0.0</version>
 	</parent>
 
 	<properties>
@@ -162,34 +162,6 @@
 				<artifactId>maven-failsafe-plugin</artifactId>
 				<configuration>
 					<skip>${skip.integration.test}</skip>
-				</configuration>
-				<executions>
-					<execution>
-						<goals>
-							<goal>integration-test</goal>
-							<goal>verify</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-				</plugins>
-			</build>
-		</profile>
-		<profile>
-			<id>failsafe-openjdk-11</id>
-			<activation>
-				<activeByDefault>false</activeByDefault>
-				<jdk>11</jdk>
-			</activation>
-			<build>
-				<plugins>
-					<plugin>
-				<artifactId>maven-failsafe-plugin</artifactId>
-				<configuration>
-					<skip>${skip.integration.test}</skip>
-					<argLine>
-						--illegal-access=permit
-					</argLine>
 				</configuration>
 				<executions>
 					<execution>
