@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>org.alfresco.activiti</groupId>
 		<artifactId>aps-project</artifactId>
-		<version>3.0.0-SNAPSHOT</version>
+		<version>3.0.0</version>
 	</parent>
 
 	<dependencyManagement>
@@ -163,8 +163,12 @@
 			<scope>provided</scope>
 			<exclusions>
 				<exclusion>
-					<groupId>com.activiti</groupId>
-					<artifactId>aspose-transformation</artifactId>
+					<groupId>org.apache.commons</groupId>
+					<artifactId>commons-email2-core</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.apache.commons</groupId>
+					<artifactId>commons-email2-jakarta</artifactId>
 				</exclusion>
 			</exclusions>
 		</dependency>
@@ -174,6 +178,20 @@
 			<version>${aps.version}</version>
 			<scope>test</scope>
 			<classifier>classes</classifier>
+			<exclusions>
+				<exclusion>
+					<groupId>com.activiti</groupId>
+					<artifactId>aspose-transformation</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.apache.commons</groupId>
+					<artifactId>commons-email2-core</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.apache.commons</groupId>
+					<artifactId>commons-email2-jakarta</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>com.opencsv</groupId>
@@ -328,34 +346,6 @@
 				<plugins>
 					<plugin>
 				<artifactId>maven-surefire-plugin</artifactId>
-			</plugin>
-				</plugins>
-			</build>
-		</profile>
-		<profile>
-			<id>surefire-openjdk-11</id>
-			<activation>
-				<activeByDefault>false</activeByDefault>
-				<jdk>11</jdk>
-			</activation>
-			<build>
-				<plugins>
-					<plugin>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<configuration>
-					<skip>${skip.integration.test}</skip>
-					<argLine>
-						--illegal-access=permit
-					</argLine>
-				</configuration>
-				<executions>
-					<execution>
-						<goals>
-							<goal>integration-test</goal>
-							<goal>verify</goal>
-						</goals>
-					</execution>
-				</executions>
 			</plugin>
 				</plugins>
 			</build>
